fixed cors policy issues.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "insult-generator",
+  "homepage": "https://PDJefferson.github.io/insult-generator",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://evilinsult.com",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -11,6 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bad-words": "^3.0.4",
+    "cors": "^2.8.5",
+    "gh-pages": "^4.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +21,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=5000 && react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
